Fix version information not visible on lower height screens, Fixes #133

--- a/layout-single-column.css
+++ b/layout-single-column.css
@@ -905,7 +905,7 @@ body.layout-single-column {
   flex-grow: 1;
   height: 100vh;
   max-width: 350px;
-  min-height: 880px;
+  min-height: 500px;
   position: sticky;
   top: 0;
 }
